<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/summary_background">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.2"
        android:visibility="visible"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="26.8"
        android:src="@drawable/seal_confirmation"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="3.5">

        <putitout.laundrywalaz.widgets.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/orderPlacedText"
            android:textSize="@dimen/_66px"
            android:textColor="@color/white"
            app:customTypefaceTextView="@string/fontMyriadPro"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="3.1">

        <putitout.laundrywalaz.widgets.TypefaceTextView
            android:id="@+id/whenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/orderIdText"
            android:textSize="@dimen/_76px"
            android:textColor="@color/white"
            app:customTypefaceTextView="@string/fontMyriadPro"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="3.5">

        <putitout.laundrywalaz.widgets.TypefaceTextView
            android:id="@+id/orderIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/staticText"
            android:textSize="@dimen/_66px"
            android:textColor="@color/white"
            app:customTypefaceTextView="@string/fontMyriadPro"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="3.1">

        <putitout.laundrywalaz.widgets.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pickupDateText"
            android:textSize="@dimen/_66px"
            android:textColor="@color/white"
            app:customTypefaceTextView="@string/fontMyriadPro"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="4.1">

        <putitout.laundrywalaz.widgets.TypefaceTextView
            android:id="@+id/summaryPickUpDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="Monday,26 June - 6:00pm"
            android:textSize="@dimen/_66px"
            android:textColor="@color/white"
            app:customTypefaceTextView="@string/fontMyriadPro"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="3.1">

        <putitout.laundrywalaz.widgets.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/deliveryDateText"
            android:textSize="@dimen/_66px"
            android:textColor="@color/white"
            app:customTypefaceTextView="@string/fontMyriadPro"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="4.1">

        <putitout.laundrywalaz.widgets.TypefaceTextView
            android:id="@+id/summaryDeliveryDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="Monday,26 June - 6:00pm"
            android:textSize="@dimen/_66px"
            android:textColor="@color/white"
            app:customTypefaceTextView="@string/fontMyriadPro"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="3.1">

        <putitout.laundrywalaz.widgets.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="@string/addressText"
            android:textSize="@dimen/_66px"
            android:textColor="@color/white"
            app:customTypefaceTextView="@string/fontMyriadPro"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="3.1">

        <putitout.laundrywalaz.widgets.TypefaceTextView
            android:id="@+id/summaryAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:text="Al Fateh Lane Lahore Punjab Pakistan"
            android:textSize="@dimen/_66px"
            android:textColor="@color/white"
            app:customTypefaceTextView="@string/fontMyriadPro"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:visibility="visible"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_weight="6.6">

        <putitout.laundrywalaz.widgets.TypefaceButton
            android:id="@+id/cancelOrderButton"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:text="@string/cancelOrderText"
            android:textSize="@dimen/_48px"
            android:textColor="@color/text_gray"
            app:customTypefaceButton="@string/fontMyriadProLight"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:visibility="visible"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.6">

        <putitout.laundrywalaz.widgets.TypefaceButton
            android:id="@+id/orderStatusButton"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:text="@string/orderStatText"
            android:textSize="@dimen/_66px"
            android:textStyle="bold"
            android:textColor="@color/bluish"
            app:customTypefaceButton="@string/fontMyriadPro"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:visibility="visible"/>

</LinearLayout>

