<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg">

        <putitout.laundrywalaz.widgets.TypefaceTextView
            android:id="@+id/headerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_76px"
            android:text="@string/forgotLogin"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textColor="@color/bluish"
            android:visibility="visible"
            app:customTypefaceTextView="@string/fontMyriadProLight"/>

        <ImageView
            android:id="@+id/backImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:padding="@dimen/_30px"
            android:src="@drawable/back_arrow"
            android:visibility="visible"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12.2"
        android:visibility="visible"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="28.8"
        android:src="@drawable/forgot_password_lock"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:visibility="visible"/>

    <putitout.laundrywalaz.widgets.TypefaceTextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="190dp"
        android:layout_height="0dp"
        android:layout_weight="13"
        android:text="@string/forgotPasswordDetail"
        android:textSize="@dimen/_55px"
        android:layout_gravity="center"
        android:lines="3"
        android:textColor="@color/dark_gray"
        android:gravity="center|center_vertical"
        app:customTypefaceTextView="@string/fontMyriadProLight"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.1"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5.8"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="87.5"
            android:orientation="vertical">

            <putitout.laundrywalaz.widgets.TypefaceEditText
                android:id="@+id/emailAddressEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.7"
                android:hint="@string/emailHint"
                android:textColorHint="@color/light_grey"
                android:textSize="@dimen/_66px"
                android:singleLine="true"
                android:textColor="@color/light_grey"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:maxLength="35"
                android:ellipsize="end"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:scrollbars="horizontal"
                android:gravity="center|start"
                app:customTypefaceEditText="@string/fontMyriadProLight"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/email_separater"
                android:layout_weight="0.1"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.7"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.2"
        android:visibility="visible"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="16"
        android:visibility="visible"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.6">

        <putitout.laundrywalaz.widgets.TypefaceButton
            android:id="@+id/sendLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/send_btn"
            android:text="@string/send"
            android:textSize="@dimen/_66px"
            android:textColor="@color/white"
            app:customTypefaceButton="@string/fontMyriadProLight"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
        android:visibility="visible"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:visibility="visible"/>

</LinearLayout>

